maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:2: error: Missing closing brace `}' assumed here
import scala.collection.mutable.Queue
^ShortestPathMaze:4: error: expected start of definition
override def run() {
         ^ShortestPathMaze:53: error: expected class or object definition
def findBaggle(){
^